--- a/checkpoints/houses/houses.ipynb
+++ b/checkpoints/houses/houses.ipynb
@@ -1242,6 +1242,28 @@
     "ax.set_ylabel('Residuals')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# * the loss and gradient\n",
+    "# * the model parameters\n",
+    "# * the lowess parameter\n",
+    "# *  sns.residplot()\n",
+    "# * Why residuals but not actual price vs predicted\n",
+    "# * Get all of the kind of plots and their use + the matrix plot search what’s called box with different colours \n",
+    "# * Box plots \n",
+    "# * How to reduce the error , what are the adjustment or the processs that you need to follow in order to determine that \n",
+    "# * How does the models get ll of the features and then turn them into y point \n",
+    "# * How the slope is calulted \n",
+    "# * Did not really understand the logic of r-squared error, squared mean and how to get the best values out of them (again the process\n",
+    "# * Absolute error , mean error \n",
+    "# * Regression plot, how does it differ from the actual plot (is it just the line because I noticed some points changes even when the order of x and y axis are still the same \n",
+    "# * how does the y axis get the y label price while i did not specify"
+   ]
   }
  ],
  "metadata": {
